# cargo-supply-chain

./: .cirrus.yml  CHANGELOG.md  Cargo.toml  Changes.md  LICENSE-MIT  LICENSE-ZLIB  README.md  Readme.md  release_checks
.github/workflows/: rust.yml  rust.yml.disabled
dep_tests/: README.md  cargo_0.70.1.deps.json  snapbox_0.4.11.deps.json
deps_tests/: README.md  cargo_0.70.1.deps_no_dev.json  cargo_0.70.1.metadata.json  snapbox_0.4.11.metadata.json
fixtures/optional_non_dev_dep/: Cargo.toml
src/: api_client.rs  authors.rs  cli.rs  common.rs  crates_cache.rs  crates_io.rs  main.rs  owners.rs  publishers.rs
src/subcommands/: authors.rs  crates.rs  help.rs  json.rs  json_schema.rs  lines.rs  mod.rs  publishers.rs  update.rs
