[package]
name = "cargo-supply-chain"
version = "0.0.1"
description = "Gather author, contributor, publisher data on crates in your dependency graph"
repository = "https://github.com/HeroicKatora/cargo-supply-chain"
authors = ["Andreas Molzer <andreas.molzer@gmx.de>"]
edition = "2018"
license = "Apache-2.0 OR MIT OR Zlib"
categories = ["development-tools::cargo-plugins", "command-line-utilities"]

[dependencies]
cargo_metadata = "0.11.3"
ureq = {version = "1.5.0", features = ["json"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"