[package]
name = "cargo-supply-chain"
version = "0.3.7"
description = "Gather author, contributor, publisher data on crates in your dependency graph"
repository = "https://github.com/rust-secure-code/cargo-supply-chain"
authors = ["Andreas Molzer <andreas.molzer@gmx.de>", "Sergey \"Shnatsel\" Davidoff <shnatsel@gmail.com>"]
edition = "2018"
license = "Apache-2.0 OR MIT OR Zlib"
categories = ["development-tools::cargo-plugins", "command-line-utilities"]

[dependencies]
cargo_metadata = "0.23.0"
csv = "1.1"
flate2 = "1"
humantime = "2"
humantime-serde = "1"
ureq = { version = "2.0.1", default-features=false, features = ["tls", "native-certs", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tar = "0.4.30"
indicatif = "0.17.0"
bpaf = { version = "0.9.1", features = ["derive", "dull-color"] }
anyhow = "1.0.28"
dirs = "6.0.0"

[dev-dependencies]
schemars = "0.8.3"
